2015-10-27  Martin Jambor  <mjambor@suse.cz>

	* tree-sra.c (replace_removed_params_ssa_names): Change type of
	parameter stmt to gimple.

2015-10-26  Martin Jambor  <mjambor@suse.cz>

	Backport from mainline
	2015-10-09  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/67794
	* tree-sra.c (replace_removed_params_ssa_names): Do not distinguish
	between types of statements but accept original definitions as a
	parameter.
	(ipa_sra_modify_function_body): Use FOR_EACH_SSA_DEF_OPERAND to
	iterate over definitions.

2015-10-25  John David Anglin  <danglin@gcc.gnu.org>

	PR middle-end/68079
	* dojump.c (do_compare_and_jump): Canonicalize both function and
	method types.

2015-10-22  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	Backport from mainline
	2015-10-22  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	PR target/68015
	* config/s390/s390.md (mov<mode>cc): Emit compare only if we don't
	already have a comparison result.

2015-10-22  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2015-10-21  Uros Bizjak  <ubizjak@gmail.com>

	PR target/68018
	* config/i386/i386.c (ix86_compute_frame_layout): Realign the stack
	for 64-bit MS_ABI targets also when default incoming stack boundary
	is overriden.

2015-10-20  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	Backport from mainline r229024
	2015-10-20  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	PR target/66912
	* varasm.c (default_binds_local_p_2): Turn on extern_protected_data.

2015-10-19  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2015-07-20  Mikhail Maltsev  <maltsevm@gmail.com>

	* wide-int.h (struct binary_traits): Fix partial specialization syntax.
	(struct int_traits): Likewise.

2015-10-16  Richard Sandiford  <richard.sandiford@arm.com>

	PR middle-end/66311
	* wide-int.cc (wi::from_mpz): Make sure that absolute mpz value
	is zero- rather than sign-extended.

2015-10-15  Peter Bergner  <bergner@vnet.ibm.com>

	Backport from mainline
	2015-10-14  Peter Bergner  <bergner@vnet.ibm.com>